# composetest

./: .gitignore  .project  .pydevproject  Dockerfile  Pipfile  README.md  docker-compose.yml  manage.py  ptvsd_manage.py  pydevd_manage.py  pyproject.toml  requirements.txt
composetest/: asgi.py  settings.py  urls.py  wsgi.py
