[tool.poetry]
name = "y"
version = "0.1.0"
description = ""
authors = ["Ace <ace.jl.han@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.4"

[tool.poetry.dev-dependencies]
ptvsd = "^4.3.2"
pydevd = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
